{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 33,
  "lineage": "f3d559a9-77e4-d7dc-e4c2-190bbb9cd36c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:933085737869:loadbalancer/app/mpulse-backend-prod-lb-green/dc708542246bff85",
            "arn_suffix": "app/mpulse-backend-prod-lb-green/dc708542246bff85",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mpulse-backend-prod-lb-green-1185560424.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:933085737869:loadbalancer/app/mpulse-backend-prod-lb-green/dc708542246bff85",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mpulse-backend-prod-lb-green",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08892c9a19d106c64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-074bc4b3e4e2b886b"
              },
              {
                "subnet_id": "subnet-08925e5c7c5bd434a"
              }
            ],
            "subnets": [
              "subnet-074bc4b3e4e2b886b",
              "subnet-08925e5c7c5bd434a"
            ],
            "vpc_id": "vpc-06da190695d5a99f8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "testapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:933085737869:listener/app/mpulse-backend-prod-lb-green/dc708542246bff85/c0b843d4dcc12705",
            "certificate_arn": "arn:aws:acm:us-east-1:933085737869:certificate/b46d1f01-6617-4ac0-a46f-dc592c35bbf8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:933085737869:targetgroup/mpulse-backend-prod-tg-green/fa3dd5222490810c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:933085737869:listener/app/mpulse-backend-prod-lb-green/dc708542246bff85/c0b843d4dcc12705",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:933085737869:loadbalancer/app/mpulse-backend-prod-lb-green/dc708542246bff85",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.myapp-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "myapp-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:933085737869:targetgroup/mpulse-backend-prod-tg-green/fa3dd5222490810c",
            "arn_suffix": "targetgroup/mpulse-backend-prod-tg-green/fa3dd5222490810c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:933085737869:targetgroup/mpulse-backend-prod-tg-green/fa3dd5222490810c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mpulse-backend-prod-tg-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "dependencies": [
            "aws_vpc.sqa-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sqa-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033b657ff298645c5",
            "association_id": "eipassoc-0217064401df6f437",
            "domain": "vpc",
            "id": "eipalloc-033b657ff298645c5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03eda5497149eb8f6",
            "private_dns": "ip-172-16-2-184.ec2.internal",
            "private_ip": "172.16.2.184",
            "public_dns": "ec2-44-217-144-121.compute-1.amazonaws.com",
            "public_ip": "44.217.144.121",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sqa-igw",
            "aws_vpc.sqa-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce19c2b391405505",
            "association_id": "eipassoc-0c78b189a4fc11d28",
            "domain": "vpc",
            "id": "eipalloc-0ce19c2b391405505",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0052b42ea59b916a6",
            "private_dns": "ip-172-16-3-91.ec2.internal",
            "private_ip": "172.16.3.91",
            "public_dns": "ec2-52-73-162-214.compute-1.amazonaws.com",
            "public_ip": "52.73.162.214",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sqa-igw",
            "aws_vpc.sqa-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sqa-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:internet-gateway/igw-0efb7f389f10f97a1",
            "id": "igw-0efb7f389f10f97a1",
            "owner_id": "933085737869",
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "dependencies": [
            "aws_vpc.sqa-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sqa-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033b657ff298645c5",
            "association_id": "eipassoc-0217064401df6f437",
            "connectivity_type": "public",
            "id": "nat-03e468c513cb13979",
            "network_interface_id": "eni-03eda5497149eb8f6",
            "private_ip": "172.16.2.184",
            "public_ip": "44.217.144.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08925e5c7c5bd434a"
          },
          "dependencies": [
            "aws_eip.sqa-eip",
            "aws_internet_gateway.sqa-igw",
            "aws_subnet.public",
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce19c2b391405505",
            "association_id": "eipassoc-0c78b189a4fc11d28",
            "connectivity_type": "public",
            "id": "nat-0b18c308d450cc3cd",
            "network_interface_id": "eni-0052b42ea59b916a6",
            "private_ip": "172.16.3.91",
            "public_ip": "52.73.162.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074bc4b3e4e2b886b"
          },
          "dependencies": [
            "aws_eip.sqa-eip",
            "aws_internet_gateway.sqa-igw",
            "aws_subnet.public",
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0efb7f389f10f97a1",
            "id": "r-rtb-00d54fcccfb783b1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d54fcccfb783b1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sqa-igw",
            "aws_vpc.sqa-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:route-table/rtb-0dedc69adb2eed1f5",
            "id": "rtb-0dedc69adb2eed1f5",
            "owner_id": "933085737869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e468c513cb13979",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sqa-eip",
            "aws_internet_gateway.sqa-igw",
            "aws_nat_gateway.sqa-natgw",
            "aws_subnet.public",
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:route-table/rtb-0f5c822dc253a1db6",
            "id": "rtb-0f5c822dc253a1db6",
            "owner_id": "933085737869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b18c308d450cc3cd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sqa-eip",
            "aws_internet_gateway.sqa-igw",
            "aws_nat_gateway.sqa-natgw",
            "aws_subnet.public",
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011cc82fdf7c02d81",
            "route_table_id": "rtb-0dedc69adb2eed1f5",
            "subnet_id": "subnet-04da0a9de240fedee"
          },
          "dependencies": [
            "aws_eip.sqa-eip",
            "aws_internet_gateway.sqa-igw",
            "aws_nat_gateway.sqa-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cad592b9911277b",
            "route_table_id": "rtb-0f5c822dc253a1db6",
            "subnet_id": "subnet-0604847c23ea83fe3"
          },
          "dependencies": [
            "aws_eip.sqa-eip",
            "aws_internet_gateway.sqa-igw",
            "aws_nat_gateway.sqa-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:security-group/sg-08892c9a19d106c64",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08892c9a19d106c64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "mpulse-backend-load-balancer-prod-green-security-group",
            "name_prefix": "",
            "owner_id": "933085737869",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sqa-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:security-group/sg-0e9b81f76045f0a23",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9b81f76045f0a23",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08892c9a19d106c64"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08892c9a19d106c64"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "prod--green-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "933085737869",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.sqa-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:subnet/subnet-04da0a9de240fedee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04da0a9de240fedee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933085737869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "dependencies": [
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:subnet/subnet-0604847c23ea83fe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0604847c23ea83fe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933085737869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "dependencies": [
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:subnet/subnet-08925e5c7c5bd434a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08925e5c7c5bd434a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933085737869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "dependencies": [
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:subnet/subnet-074bc4b3e4e2b886b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074bc4b3e4e2b886b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933085737869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06da190695d5a99f8"
          },
          "dependencies": [
            "aws_vpc.sqa-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sqa-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933085737869:vpc/vpc-06da190695d5a99f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0815733308c3db031",
            "default_route_table_id": "rtb-00d54fcccfb783b1b",
            "default_security_group_id": "sg-05e462b5afede512f",
            "dhcp_options_id": "dopt-00351820e092a0ae4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06da190695d5a99f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d54fcccfb783b1b",
            "owner_id": "933085737869"
          }
        }
      ]
    }
  ]
}